--- a/sass/partials/components/_history.scss
+++ b/sass/partials/components/_history.scss
@@ -30,7 +30,6 @@
             display: flex;
             flex-wrap: wrap;
             height: auto;
-            justify-content: space-between;
             width: 100%;
             margin: 5px;
             img {
